--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -741,6 +741,40 @@
     "# Convert datetime format to 2019-10-21 17:24:35 using Python string format method strftime() and adding how we want the string to look inside the parentheses\n",
     "datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7dd6a6c0",
+   "metadata": {},
+   "source": [
+    "# 6.3.1 Plot Latitude vs. Temperature - Get today's date "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "29594e9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'07/28/21'"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "\n",
+    "# Get today's date in seconds.\n",
+    "today = time.strftime(\"%x\")\n",
+    "today"
+   ]
   }
  ],
  "metadata": {
