Challenge Part 1 - Complete

--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -142,23 +142,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "id": "01a16e8a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=15b3e1ee412c2a8c1876365b747ac5a6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Starting URL for Weather Map API Call.\n",
     "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
     "\n",
-    "print(url)"
+    "#print(url)"
    ]
   },
   {
@@ -191,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "9a36802b",
    "metadata": {},
    "outputs": [],
@@ -205,20 +197,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "id": "5a997ee4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the base of our API url as a variable with the API key \n",
     "url_2 = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
-    "# Save London as a variable names city\n",
+    "# Save London as a variable named city\n",
     "city = \"London\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "79101421",
    "metadata": {},
    "outputs": [],
@@ -229,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "id": "bab8d7eb",
    "metadata": {},
    "outputs": [],
@@ -243,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "id": "59c17368",
    "metadata": {},
    "outputs": [
@@ -253,7 +245,7 @@
        "dict_keys(['coord', 'weather', 'base', 'main', 'visibility', 'wind', 'clouds', 'dt', 'sys', 'timezone', 'id', 'name', 'cod'])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,22 +257,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "id": "e8b1caa6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'temp': 288.19,\n",
-       " 'feels_like': 288.15,\n",
-       " 'temp_min': 286.55,\n",
-       " 'temp_max': 289.98,\n",
+       "{'temp': 286.72,\n",
+       " 'feels_like': 286.51,\n",
+       " 'temp_min': 285.32,\n",
+       " 'temp_max': 287.98,\n",
        " 'pressure': 1008,\n",
-       " 'humidity': 92}"
+       " 'humidity': 91}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "id": "429df14b",
    "metadata": {},
    "outputs": [
@@ -310,7 +302,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "id": "4f9b168c",
    "metadata": {},
    "outputs": [
@@ -335,7 +327,7 @@
        "200"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "id": "0f6f7e9e",
    "metadata": {},
    "outputs": [
@@ -357,7 +349,7 @@
        "<Response [404]>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "id": "b6ab2b8b",
    "metadata": {},
    "outputs": [
@@ -391,7 +383,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,17 +397,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "id": "fd98502a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":801,\"main\":\"Clouds\",\"description\":\"few clouds\",\"icon\":\"02d\"}],\"base\":\"stations\",\"main\":{\"temp\":72.66,\"feels_like\":72.36,\"temp_min\":68.63,\"temp_max\":76.78,\"pressure\":1016,\"humidity\":58},\"visibility\":10000,\"wind\":{\"speed\":3,\"deg\":180,\"gust\":5.99},\"clouds\":{\"all\":20},\"dt\":1627507443,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1627464773,\"sunset\":1627517301},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":800,\"main\":\"Clear\",\"description\":\"clear sky\",\"icon\":\"01n\"}],\"base\":\"stations\",\"main\":{\"temp\":61.2,\"feels_like\":60.03,\"temp_min\":55.42,\"temp_max\":64.99,\"pressure\":1012,\"humidity\":64},\"visibility\":10000,\"wind\":{\"speed\":7,\"deg\":317,\"gust\":14},\"clouds\":{\"all\":0},\"dt\":1627704464,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1627724155,\"sunset\":1627776308},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "id": "44a23575",
    "metadata": {},
    "outputs": [
@@ -435,33 +427,33 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 801,\n",
-       "   'main': 'Clouds',\n",
-       "   'description': 'few clouds',\n",
-       "   'icon': '02d'}],\n",
+       " 'weather': [{'id': 800,\n",
+       "   'main': 'Clear',\n",
+       "   'description': 'clear sky',\n",
+       "   'icon': '01n'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 72.66,\n",
-       "  'feels_like': 72.36,\n",
-       "  'temp_min': 68.63,\n",
-       "  'temp_max': 76.78,\n",
-       "  'pressure': 1016,\n",
-       "  'humidity': 58},\n",
+       " 'main': {'temp': 61.2,\n",
+       "  'feels_like': 60.03,\n",
+       "  'temp_min': 55.42,\n",
+       "  'temp_max': 64.99,\n",
+       "  'pressure': 1012,\n",
+       "  'humidity': 64},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 3, 'deg': 180, 'gust': 5.99},\n",
-       " 'clouds': {'all': 20},\n",
-       " 'dt': 1627507443,\n",
+       " 'wind': {'speed': 7, 'deg': 317, 'gust': 14},\n",
+       " 'clouds': {'all': 0},\n",
+       " 'dt': 1627704464,\n",
        " 'sys': {'type': 2,\n",
        "  'id': 2013408,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1627464773,\n",
-       "  'sunset': 1627517301},\n",
+       "  'sunrise': 1627724155,\n",
+       "  'sunset': 1627776308},\n",
        " 'timezone': -14400,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "id": "8252d488",
    "metadata": {},
    "outputs": [
@@ -505,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "id": "447a64a3",
    "metadata": {},
    "outputs": [
@@ -531,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "id": "5cf70dda",
    "metadata": {},
    "outputs": [
@@ -557,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 39,
    "id": "9eacf23d",
    "metadata": {},
    "outputs": [
@@ -565,33 +557,33 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 803,\n",
-       "   'main': 'Clouds',\n",
-       "   'description': 'broken clouds',\n",
-       "   'icon': '04d'}],\n",
+       " 'weather': [{'id': 800,\n",
+       "   'main': 'Clear',\n",
+       "   'description': 'clear sky',\n",
+       "   'icon': '01n'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 67.93,\n",
-       "  'feels_like': 67.71,\n",
-       "  'temp_min': 64.94,\n",
-       "  'temp_max': 70.61,\n",
-       "  'pressure': 1015,\n",
-       "  'humidity': 70},\n",
+       " 'main': {'temp': 61.2,\n",
+       "  'feels_like': 60.03,\n",
+       "  'temp_min': 55.42,\n",
+       "  'temp_max': 64.99,\n",
+       "  'pressure': 1012,\n",
+       "  'humidity': 64},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 1.01, 'deg': 64, 'gust': 3},\n",
-       " 'clouds': {'all': 59},\n",
-       " 'dt': 1627516642,\n",
+       " 'wind': {'speed': 7, 'deg': 317, 'gust': 14},\n",
+       " 'clouds': {'all': 0},\n",
+       " 'dt': 1627704464,\n",
        " 'sys': {'type': 2,\n",
-       "  'id': 2001997,\n",
+       "  'id': 2013408,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1627464773,\n",
-       "  'sunset': 1627517301},\n",
+       "  'sunrise': 1627724155,\n",
+       "  'sunset': 1627776308},\n",
        " 'timezone': -14400,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "id": "895db317",
    "metadata": {},
    "outputs": [],
@@ -616,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "id": "559fa524",
    "metadata": {},
    "outputs": [
@@ -624,13 +616,13 @@
      "data": {
       "text/plain": [
        "{'type': 2,\n",
-       " 'id': 2001997,\n",
+       " 'id': 2013408,\n",
        " 'country': 'US',\n",
-       " 'sunrise': 1627464773,\n",
-       " 'sunset': 1627517301}"
+       " 'sunrise': 1627724155,\n",
+       " 'sunset': 1627776308}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 27,
    "id": "a0717519",
    "metadata": {},
    "outputs": [
@@ -652,7 +644,7 @@
        "'US'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,17 +656,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 28,
    "id": "55a79adb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1627516642"
+       "1627704464"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,17 +686,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 29,
    "id": "0a000564",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2021, 7, 28, 23, 57, 22)"
+       "datetime.datetime(2021, 7, 31, 4, 7, 44)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,17 +714,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 30,
    "id": "76df41b7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2021-07-28 23:57:22'"
+       "'2021-07-31 04:07:44'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,17 +744,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 31,
    "id": "29594e9f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'07/28/21'"
+       "'07/30/21'"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
