Deliverable 2. Create a Customer Travel Destinations Map - Complete

--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -1180,7 +1180,7 @@
     "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
     "\n",
     "fig.add_layer(heat_layer)\n",
-    "# Add markers on top pf the heat map\n",
+    "# Add markers on top of the heat map\n",
     "fig.add_layer(marker_layer)\n",
     "\n",
     "# Call the figure to plot the data.\n",
